# OPSource

./: .gitmodules  BRANCH_STATUS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INDEX.md  MAINTENANCE.md  OPSource.code-workspace  PR_DESCRIPTION.md  PR_INSTRUCTIONS.md  README.md  REPO-SYNC-README.md  ROADMAP.md  RUST_MIGRATION_PLAN.md  SECURITY_FIXES.md  TODO.md  btc_security_check.py  keyconfig.txt  migrate_bitcoin_code.ps1  minimal-requirements.txt  package-lock.json  package.json  pr_description.txt  pr_template.md  requirements-dev.txt  requirements-fixed.txt  requirements-modified.txt  requirements.txt  security-fixes.txt  security-scan.ps1  security_audit.ps1  sync-repos.ps1  sync-repos.sh  system_map.md  test_bitcoin_migration.ps1  test_installers.py  test_report.md
.cursor/: mcp.json  (+1 more)
anya-core/: .gitmodules  AI_LABELLING.md  CHANGELOG.md  COMMIT_RULES.md  Cargo.toml  Clarinet.toml  GITHUB.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MAINTENANCE.md  NEW_FEATURES.md  README.md  REPOSITORY_RULES.md  ROADMAP.md  ROOT_INDEX.md  SECURITY.md  SYSTEM_MAP.md  TODO.md  VALIDATION_SUMMARY.md  anya.code-workspace  book.toml  fix-workflow.ps1  installer.d  package.json  pubspec.yaml  resolve_conflicts.ps1  reviewdog.txt  rust-toolchain.toml
anya-core/.cursor/: README.md  mcp.json
anya-core/.github/workflows/: checkpoint.yml  coverage.yml  pr-automation.yml  release.yml  rust-test.yml  security-scan.yml  sync-labelling.yml
anya-core/.github/workflows/backup/: ai-review.yml.bak
anya-core/.github/workflows/old/: ai-review.yml  ci-test.yml  sync-enterprise.yml
anya-core/anya-bitcoin/src/: lib.rs
anya-core/anya-bitcoin/src/layer2/: mod.rs
anya-core/anya-enterprise/: Cargo.toml
anya-core/anya-extensions/: Cargo.toml
anya-core/dao/: README.md
anya-core/dao/core/: dao-core.clar
anya-core/dao/extensions/: token-economics-minimal.clar  token-economics.clar
anya-core/dao/tests/: dao-core-test.clar
anya-core/dao/traits/: dao-trait.clar  dex-integration-trait.clar
anya-core/dependencies/: Cargo.toml  README.md  deny.toml
anya-core/dependencies/.github/workflows/: sync-enterprise.yml
anya-core/dependencies/anya-bitcoin/: Cargo.toml
anya-core/dependencies/anya-bitcoin/src/: lib.rs  transaction.rs  wallet.rs
anya-core/dependencies/anya-bitcoin/tests/: dlc_tests.rs  wallet_tests.rs  web5_credential_anchoring.rs
anya-core/dependencies/anya-enterprise/src/: lib.rs
anya-core/dependencies/anya-extensions/: Cargo.toml
anya-core/dependencies/anya-lightning/src/: lib.rs
anya-core/dependencies/docs/: CONTRIBUTING.md  identity.md
anya-core/dependencies/docs/api/: README.md
anya-core/dependencies/docs/identity/: README.md
anya-core/dependencies/docs/security/: advanced_security.md  security_guide.md
anya-core/dependencies/docs/system/: integration_guide.md
anya-core/dependencies/docs/version-management/: version-control.md
anya-core/dependencies/scripts/: system_setup.sh
anya-core/docs/: 404.html  AI_LABELING.md  API.md  ARCHITECTURE.md  CHECKPOINT_GUIDE.md  CONFIGURATION_MANAGEMENT.md  CONFIG_MANAGEMENT_ALIGNMENT.md  CONTRIBUTING.md  CORE_SYSTEM_INTEGRATION.md  DAO_INDEX.md  DAO_SYSTEM_GUIDE.md  DAO_SYSTEM_MAP.md  DOCUMENTATION_SYNC_PLAN.md  HEXAGONAL.md  IMPLEMENTATION_MILESTONES.md  INDEX.md  LABELLING_SYSTEM.md  ML_SYSTEM_ARCHITECTURE.md.bak  PERFORMANCE_ARCHITECTURE.md  READ_FIRST_ALWAYS.md  ROADMAP.md  SEARCH_INDEX.md  SECURITY_ARCHITECTURE.md  SYSTEM_MAP.md  TESTING_STRATEGY.md  TOKENOMICS_SYSTEM.md  UPDATE_GITHUB_REFERENCES.md  _config.yml  changelog.html  development.md
anya-core/docs/api/: core.html
anya-core/docs/architecture/: core.html
anya-core/docs/bitcoin/: LAYER2_SUPPORT.md  lightning.md
anya-core/docs/checkpoints/: AIP-001-read_first_implementation_complete-2025-03-02_06-36-47.md  AIP-002-checkpoint_system_implementation-2025-03-02_06-51-39.md
anya-core/docs/getting-started/: quick-start.html
anya-core/docs/pages/: documentation.html  getting-started.html
anya-core/docs/research/: PROTOCOL_UPGRADES.md
anya-core/docs/security/: model.html
anya-core/docs/web5/: README_READ_FIRST.md  TESTING_READ_FIRST.md
anya-core/enterprise/: Cargo.toml
anya-core/git/scm0/: input
anya-core/mobile/: Cargo.toml
anya-core/reports/: packaging_validation.md
anya-core/scripts/: batch_commit.ps1  batch_commit.sh  create_checkpoint.ps1  install-clarinet.ps1  install.py  package_validation_report.ps1  run-dao-tests.ps1  simple_validation_report.ps1  sync_docs.ps1  sync_labelling.ps1  sync_labelling.py  system_setup.sh  update_github_url.ps1  update_github_url.sh  validate_components.ps1  validate_docs.ps1  validate_features.rs  verify-clarinet-config.ps1
anya-core/scripts/bitcoin/: mcp-server.js  test-mcp-server.js
anya-core/src/: lib.rs  main.rs
anya-core/src/bitcoin/: error.rs  layer2.rs  lightning.rs  mod.rs
anya-core/src/contracts/: bitcoin-issuance.clar  dao.clar  dex-adapter.clar  governance_token.clar  token-economics.clar
anya-core/src/core/: config_management.rs  mod.rs  performance_optimization.rs  reliability.rs
anya-core/src/enterprise/: mod.rs
anya-core/src/examples/: rgb_example.rs  web5_example.rs
anya-core/src/extensions/: mod.rs
anya-core/src/layer2/: mock.rs  mod.rs
anya-core/src/ml/: agent_checker.rs  mod.rs  service.rs
anya-core/src/security/: mod.rs  system_hardening.rs
anya-core/src/web5/: dwn.rs  identity.rs  metrics.rs  mod.rs  protocols.rs  read_first_dwn.rs  vc.rs
anya-core/test/web5/: read_first_test.dart
anya-core/tests/: issuance_tests.rs  layer2_integration_test.rs  rgb_asset_test.rs  run_protocol_tests.rs  run_tests.sh  sectional_test_utils.rs  simple_rgb_test.rs  standalone_test.rs  test_utils.rs  verify_migration.sh  web5_anchoring_test.rs  web5_read_first_anchoring_test.rs
anya-core/tests/config/: test_config.toml
anya-core/tests/integration/: test_installer.sh
anya-core/tests/layer2/: protocol_tests.rs
dlc-test-project/: Cargo.toml
dlc-test-project/src/: lib.rs  main.rs
dlc-test-project/src/dlc/: contract.rs  mod.rs
dlc-test-project/tests/: oracle_tests.rs
(+121 files in other folders)
