[workspace]
members = [
    "anya-core",
    "anya-core/dependencies/anya-bitcoin",
    "anya-core/dependencies/anya-extensions"
]
resolver = "2"
version = "0.2.1"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.25"
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
metrics = "0.21.1"
actix-web = "4.4.0"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
tch = "0.13"
rand = "0.8"
futures = "0.3"
ring = "0.17"
jsonwebtoken = "9.2"
mockall = "0.11"
tokio-test = "0.4"
bitcoin = { version = "0.32.1", features = ["rand", "serde"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.28.0", features = ["rand", "serde"] }
bdk = { version = "0.30.0", features = ["keys-bip39"] }
miniscript = "10.0.0"
libp2p = { version = "0.53.1", features = ["full"] }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "serde"] }
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
# rust-dlc = { git = "https://github.com/p2pderivatives/rust-dlc", tag = "v0.4.0" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", tag = "v0.10.8" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", tag = "v0.10.5" }
# rsk-jvm = { git = "https://github.com/rsksmart/rsk", tag = "PAPYRUS-3.3.1" }
# clarity-repl = { git = "https://github.com/hirosystems/clarinet", tag = "v1.7.0" }
criterion = "0.5.1"
tempfile = "3.8.1"
test-log = "0.2.14"

[workspace.package]
authors = ["OPSource Team"]
description = "Bitcoin operations with Rust implementation"
edition = "2021"
version = "0.2.1"

[package]
name = "opsource"
version = "0.2.1"
edition = "2021"
authors = ["OPSource Team"]
description = "Bitcoin operations with Rust implementation"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
md5 = "0.7.0"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3"
tempfile = "3.8.1"
dirs = "5.0.1"
sys-info = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4"
rayon = "1.7"

# Bitcoin dependencies
bitcoin = { version = "0.32.1", features = ["rand", "serde", "taproot"] }
bdk = { version = "0.30.0", features = ["keys-bip39"] }
bitcoincore-rpc = "0.17.0"
miniscript = "10.0.0"

# Lightning dependencies
lightning = { version = "0.0.116", optional = true }
lightning-persister = { version = "0.0.116", optional = true }
lightning-background-processor = { version = "0.0.116", optional = true }
lightning-block-sync = { version = "0.0.116", optional = true }
lightning-invoice = { version = "0.26.0", optional = true }
lightning-net-tokio = { version = "0.0.116", optional = true }

# Optional dependencies
# rust-dlc = { git = "https://github.com/p2pderivatives/rust-dlc", tag = "v0.4.0", optional = true }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", tag = "v0.10.8", optional = true }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", tag = "v0.10.5", optional = true }
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0", optional = true }

[features]
default = ["rust-bitcoin"]
rust-bitcoin = []
ldk = ["lightning", "lightning-persister", "lightning-background-processor", "lightning-block-sync", "lightning-invoice", "lightning-net-tokio"]
mock-lightning = []
dlc = []
rgb = ["rgb-core", "rgb-std"]
web5-support = ["web5"]
taproot = []
opsource = ["rust-bitcoin", "rgb", "web5-support", "taproot"]
anya = ["rust-bitcoin", "ldk"]
full = ["opsource", "anya", "mock-lightning"]

[lib]
name = "opsource"
path = "src/lib.rs"

[[bin]]
name = "opsource"
path = "src/main.rs"

[[bin]]
name = "installer"
path = "src/bin/installer.rs"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.dev]
debug = true
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.test]
debug = true
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
