[package]
name = "anya-core"
version = "0.1.0"
edition = "2021"
authors = ["Anya Core Team"]
description = "Core components for the Anya Bitcoin layer-2 platform"
license = "MIT"
repository = "https://github.com/anya-protocol/anya-core"
readme = "README.md"
keywords = ["bitcoin", "lightning", "web5", "blockchain", "taproot"]
categories = ["cryptography", "finance", "network-programming"]

[features]
default = ["web5", "lightning", "rgb"]
web5 = []
lightning = []
rgb = []
taproot = []  # Feature flag for taproot functionality

[lib]
name = "anya_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }

# Bitcoin dependencies
bitcoin = { version = "0.32.1", features = ["rand", "serde", "taproot"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.28.0", features = ["rand", "serde"] }
bdk = { version = "0.30.0", features = ["all-keys"] }

# Lightning dependencies
lightning = { version = "0.0.116" }
lightning-invoice = { version = "0.26.0" }
lightning-net-tokio = { version = "0.0.116" }
lightning-background-processor = { version = "0.0.116" }
lightning-block-sync = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }

# Cross-chain dependencies
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", tag = "v0.10.8" }
rsk = "0.1.0"
# taproot = "0.1.0"  # Commented out - unavailable dependency
# taproot = { git = "https://github.com/rust-bitcoin/taproot.git", branch = "master" } # Commented out - unavailable repository
elements = "0.22.0"  # Liquid/Elements dependency
elements-rpc = "0.1.0"  # Liquid/Elements RPC client

# Web5 dependencies
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }

# Database dependencies
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Cryptography
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10.1"
jsonwebtoken = "9.2"
sha2 = "0.10.8"
rand = "0.8"

# Web/API related
warp = "0.3.6"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
http = "0.2.9"
rust-embed = "8.0.0"

# Machine Learning
smartcore = "0.3.2"
ndarray = "0.15"
linfa = "0.6.1"
tract-onnx = "0.19.11"

# Testing
mockall = "0.11"
serial_test = "2.0.0"

[dev-dependencies]
tempfile = "3.8.1"
test-log = "0.2.14"
criterion = "0.5.1"
rstest = "0.18.2"
# warp-testing = "0.0.1"  # This crate doesn't exist anymore
httpmock = "0.6.8"
proptest = "1.0.0"