[package]
name = "anya-core"
version = "0.1.0"
edition = "2021"
authors = ["Anya Core Team"]
description = "Core components for the Anya Bitcoin layer-2 platform"
license = "MIT"
repository = "https://github.com/anya-protocol/anya-core"
readme = "README.md"
keywords = ["bitcoin", "lightning", "web5", "blockchain", "taproot"]
categories = ["cryptography", "finance", "network-programming"]

[workspace]
members = [
    "dependencies/anya-bitcoin",
    "dependencies/anya-extensions"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.19"
actix-web = "4.4.0"
actix-cors = "0.6.4"
clap = { version = "4.3.21", features = ["derive"] }
bitcoin = { version = "0.32.1", features = ["rand"] }

[[bin]]
name = "installer"
path = "src/bin/installer.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[dependencies]
# Bitcoin dependencies
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
bdk = { version = "0.30.0", features = ["all-keys"] }
bitcoin.workspace = true

# Lightning dependencies
lightning = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }
lightning-background-processor = { version = "0.0.116" }
lightning-block-sync = { version = "0.0.116" }
lightning-invoice = { version = "0.26.0" }
lightning-net-tokio = { version = "0.0.116" }

# Cross-chain dependencies
rgb-core = "0.10"
rsk = "0.1.0"
taproot = "0.1.0"
elements = "0.22.0"  # Liquid/Elements dependency
elements-rpc = "0.17.0"  # Liquid/Elements RPC client

# Web5 dependencies
did_resolver = "0.5.0"
did-key = "0.2.1"
did-ion = "0.1.0"
base64 = "0.21.7"
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
multibase = "0.9.1"
multihash = "0.18.1"
reqwest = { version = "0.11.24", features = ["json"] }

# Web tools
jwt = "0.16.0"
toml = "0.7.6"
uuid = { version = "1.4.1", features = ["v4"] }
env_logger = "0.10.0"
actix-web.workspace = true
actix-cors.workspace = true
clap.workspace = true

# Web5 and DID
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }

# DLC specific
secp256k1-zkp = { version = "0.7.0", features = ["global-context"] }
bdk-macros = "0.6.0"
miniscript = "10.0.0"

# Utilities
rand = "0.8"
futures = "0.3"
hex = "0.4.3"
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[lib]
name = "anya_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }

# Bitcoin dependencies
bitcoin = { version = "0.32.1", features = ["rand", "serde", "taproot"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.28.0", features = ["rand", "serde"] }
bdk = { version = "0.30.0", features = ["all-keys"] }

# Lightning dependencies
lightning = { version = "0.0.116" }
lightning-invoice = { version = "0.26.0" }
lightning-net-tokio = { version = "0.0.116" }
lightning-background-processor = { version = "0.0.116" }
lightning-block-sync = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }

# Cross-chain dependencies
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", tag = "v0.10.8" }
rsk = "0.1.0"
elements = "0.22.0"  # Liquid/Elements dependency
elements-rpc = "0.1.0"  # Liquid/Elements RPC client

# Web5 dependencies
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }

# Database dependencies
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Cryptography
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10.1"
jsonwebtoken = "9.2"
sha2 = "0.10.8"
rand = "0.8"

# Web/API related
warp = "0.3.6"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
http = "0.2.9"
rust-embed = "8.0.0"

# Machine Learning
smartcore = "0.3.2"
ndarray = "0.15"
linfa = "0.6.1"
tract-onnx = "0.19.11"

# Testing
mockall = "0.11"
serial_test = "2.0.0"

[dev-dependencies]
tempfile = "3.8.1"
test-log = "0.2.14"
criterion = "0.5.1"
rstest = "0.18.2"
httpmock = "0.6.8"
proptest = "1.0.0"