[workspace]
members = [
    ".",
    "anya-enterprise",
    "anya-extensions",
    "anya-bitcoin"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Botshelo Mokoka <botshelomokoka@gmail.com>"]
license = "MIT"
repository = "https://github.com/anya-org/anya"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.25"
toml = "0.8.8"
anyhow = "1.0.75"
thiserror = "1.0.69"
async-trait = "0.1.77"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
once_cell = "1.18.0"
regex = "1.9.5"

# Web5 Integration
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }
jsonschema = "0.17.1"

# Blockchain Integration
bitcoin = { version = "0.32.1", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
bitcoin-wallet = "1.1.0"

# Networking
libp2p = { version = "0.53.1", features = ["full"] }

# Logging and Metrics
tracing = { version = "0.1.40", features = ["attributes", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
metrics = "0.21.1"

# Cryptography
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "serde"] }

# Testing
tokio-test = "0.4.3"
mockall = "0.11.4"
criterion = "0.5.1"
proptest = "1.2.0"
test-log = { version = "0.2.14", features = ["trace"] }

# Machine Learning
ndarray = "0.15.6"
smartcore = "0.3.2"
tch = "0.14.0"
log = "0.4.20"

[package]
name = "anya-core"
version.workspace = true
edition.workspace = true
description = "Decentralized AI Governance System"
authors.workspace = true
license.workspace = true

[dependencies]
# Core Dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

# Web5 Integration
web5 = { workspace = true }
jsonschema = { workspace = true }

# Blockchain Integration
bitcoin = { workspace = true, features = ["rand", "secp-recovery"] }
bitcoincore-rpc = { workspace = true }
secp256k1 = { version = "0.27.0", features = ["rand", "recovery"] }
bip39 = "2.0.0"
md5 = "0.7.0"

# Networking
libp2p = { workspace = true }

# Logging and Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = "0.2.5"
metrics = { version = "0.21.1" }
log = "0.4.20"

# Time and Date
chrono = { version = "0.4.31", features = ["serde"], default-features = false }

# Terminal Detection
is-terminal = "0.4.9"

# Cryptography
curve25519-dalek = { workspace = true }

# Utilities
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
base64 = "0.21.7"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
x509-parser = "0.15.1"
rustls = "0.22.1"
data-encoding = "2.5.0"
jsonwebtoken = "9.2.0"
totp-rs = "5.4.0"
darling = "*"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = "3.9.0"
criterion = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = ["std"]
std = []
nightly = []
enterprise = ["std"]
bitcoin = ["std"]
liquid = ["std"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "anya-core"
path = "src/main.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "installer"
path = "src/bin/installer.rs"

[[bin]]
name = "lightning_demo"
path = "src/bin/lightning_demo.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "run_protocol_tests"
path = "tests/run_protocol_tests.rs"
