[package]
name = "anya-bitcoin"
version = "0.1.0"
edition = "2021"
authors = ["Anya Contributors"]
description = "Bitcoin-specific functionality for Anya project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botshelomokoka/anya-core"

[dependencies]
bitcoin = { version = "0.32.1", features = ["rand", "serde", "taproot"] }
secp256k1 = { version = "0.28.0", features = ["rand", "serde"] }
bitcoincore-rpc = "0.17.0"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
tracing = "0.1.40"
rand = "0.8"
hex = "0.4.3"
bincode = "1.3.3"
async-trait = "0.1.77"
secp256k1-zkp = "0.7.0"
sha2 = "0.10.8"
tempfile = "3.8.1"
bdk = { version = "0.30.0", features = ["keys-bip39"] }
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", tag = "v0.10.8" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", tag = "v0.10.5" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3.17"

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"
